--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       this degree would grant that option as well.</p>
       <p>I believe that JAMK would also help me become more flexible with work and on a day to day basis because I would have to learn to cope with a certain uncertainty
       since I'd be living in a foreign country. In the university setting, I would become more familiar with doing science and how to distinguish good information from the bad.
-      And best of all, I would learn about a new culture, Finnish people, and one of the hardest languages in the world!</p>
+'      And best of all, I would learn about a new culture, Finnish people, and one of the hardest languages in the world!</p>
     </section>
 
     <div class="car"><img src="img/logo-car.png" alt="Car"></div>
@@ -95,7 +95,7 @@
       <h1>My weaknesses <img src="img/logo-thumbdown.png"
       alt="Thumb down logo"></h1>
       <ol>
-        <li>Sometimes its hard for me to concentrate due to my ADD</li>
+        <li>Sometimes it's hard for me to concentrate due to my ADD</li>
         <li>Not as organized as I want to be</li>
         <li>Too blunt for my own good</li>
         <li>I could be better at creative writing</li>
